add fonts, style files

--- a/source/index.html
+++ b/source/index.html
@@ -61,7 +61,7 @@
             <h2>Захватывающие вершины Кавказа</h2>
             <p>В сопровождении опытных гидов вы пройдёте через потрясающие ландшафты и совершите восход на вершину горы
               Чегет.</p>
-            <a class="promo-slide__link" href="#">Смотреть тур</a>
+            <a class="promo-slide__link primary-button" href="#">Смотреть тур</a>
             <ul class="promo-slide__about-list">
               <li class="promo-slide__about-item">6 дней/5 ночей</li>
               <li class="promo-slide__about-item">Высокая сложность</li>
@@ -72,7 +72,7 @@
             <h2>Невероятная природа Камчатки</h2>
             <p>Незабываемое приключение, во время которого вы отправитесь в путешествие по одному из самых нетронутых
               уголков дикой природы в мире.</p>
-            <a class="promo-slide__link" href="#">Смотреть тур</a>
+            <a class="promo-slide__link primary-button" href="#">Смотреть тур</a>
             <ul class="promo-slide__about-list">
               <li class="promo-slide__about-item">9 дней/10 ночей</li>
               <li class="promo-slide__about-item">Средняя сложность</li>
@@ -83,7 +83,7 @@
             <h2>Магические пейзажи Алтайского Края</h2>
             <p>Алтайский трекинг-тур — это захватывающее приключение с посещением магических и захватывающих
               дух ландшафтов Алтайских гор.</p>
-            <a class="promo-slide__link" href="#">Смотреть тур</a>
+            <a class="promo-slide__link primary-button" href="#">Смотреть тур</a>
             <ul class="promo-slide__about-list">
               <li class="promo-slide__about-item">8 дней/7 ночей</li>
               <li class="promo-slide__about-item">Лёгкая сложность</li>
@@ -100,8 +100,8 @@
         <h2 class="tours__title primary-title">Ближайшие туры</h2>
 
         <div class="tours__swiper swiper">
-          <div class="tours__swiper-button tours__swiper-button--prev swiper-button-prev"></div>
-          <div class="tours__swiper-button tours__swiper-button--next swiper-button-next"></div>
+          <div class="tours__swiper-button tours__swiper-button--prev primary-slider-button primary-slider-button--prev swiper-button-prev"></div>
+          <div class="tours__swiper-button tours__swiper-button--next primary-slider-button primary-slider-button--next swiper-button-next"></div>
 
           <div class="tours__swiper-wrapper swiper-wrapper">
             <div class="tours__slide tour-slide swiper-slide">
@@ -268,8 +268,8 @@
 
         <h3 class="training__subtitle">Наши инструкторы</h3>
         <div class="training__swiper swiper">
-          <div class="training__button training__button--prev swiper-button-prev"></div>
-          <div class="training__button training__button--next swiper-button-next"></div>
+          <div class="training__button training__button--prev primary-slider-button primary-slider-button--prev swiper-button-prev"></div>
+          <div class="training__button training__button--next primary-slider-button primary-slider-button--next swiper-button-next"></div>
 
           <div class="training__swiper-wrapper swiper-wrapper">
 
@@ -401,7 +401,7 @@
         <!-- primary-subtitle -->
         <h3>История компании</h3>
         <p>В далёком 2000 году мы начали заниматься туризмом — походы, поездки, восхождения, нам это настолько
-          понравилось, что мы этим стали жить.  Спустя 5 лет, в 2005 году мы основали компанию, чтобы показывать людям
+          понравилось, что мы этим стали жить. Спустя 5 лет, в 2005 году мы основали компанию, чтобы показывать людям
           удивительные места нашей страны.</p>
         <!-- primary-subtitle -->
         <h3>Наша цель</h3>
@@ -416,12 +416,12 @@
         <h2 class="reviews__title primary-title">Отзывы</h2>
 
         <div class="reviews__swiper swiper">
-          <div class="reviews__button reviews__button--prev swiper-button-prev"></div>
-          <div class="reviews__button reviews__button--next swiper-button-next"></div>
+          <div class="reviews__button reviews__button--prev primary-slider-button primary-slider-button--prev swiper-button-prev"></div>
+          <div class="reviews__button reviews__button--next primary-slider-button primary-slider-button--next swiper-button-next"></div>
 
           <div class="reviews__swiper-wrapper swiper-wrapper">
             <div class="reviews__slide review-slide swiper-slide">
-              <div class="review__photo">
+              <div class="review-slide__photo">
                 <!-- пути, размеры -->
                 <picture>
                   <source type="image/webp" media="(min-width: 768px)"
@@ -448,7 +448,7 @@
             </div>
 
             <div class="reviews__slide review-slide swiper-slide">
-              <div class="review__photo">
+              <div class="review-slide__photo">
                 <!-- пути, размеры -->
                 <picture>
                   <source type="image/webp" media="(min-width: 768px)"
@@ -476,7 +476,7 @@
             </div>
 
             <div class="reviews__slide review-slide swiper-slide">
-              <div class="review__photo">
+              <div class="review-slide__photo">
                 <!-- пути, размеры -->
                 <picture>
                   <source type="image/webp" media="(min-width: 768px)"
@@ -494,7 +494,7 @@
                   <p>Ранее не ходила на такие длинные дистанции. В первый день прошли около 30 км, физически я устала
                     на 18 км, поэтому не была уверена, пройду ли до конца. Но я справилась. Второй день прошёл легче,
                     чем ожидала, видимо организм уже привык.</p>
-                  <p>Спасибо ребятам, инструкторам за помощь и поддержку!  Я была рада быть в такой компании.</p>
+                  <p>Спасибо ребятам, инструкторам за помощь и поддержку! Я была рада быть в такой компании.</p>
                 </blockquote>
 
                 <h3 class="review-slide__author">Евгения Баженова</h3>
@@ -503,7 +503,7 @@
             </div>
 
             <div class="reviews__slide review-slide swiper-slide">
-              <div class="review__photo">
+              <div class="review-slide__photo">
                 <!-- пути, размеры -->
                 <picture>
                   <source type="image/webp" media="(min-width: 768px)"
@@ -521,7 +521,7 @@
                   <p>Это был опыт, изменивший мою жизнь! Думала, не справлюсь, но все получилось! Дух захватывает, когда
                     наконец‑то, преодолев все трудности и препятствия, взбираешься на вершину.</p>
                   <p>У нас собралась потрясающая команда. Все друг друга поддерживали, по вечерам мы сидели вместе
-                    у костра  и пели песни. Обязательно повторю такое приключение!</p>
+                    у костра и пели песни. Обязательно повторю такое приключение!</p>
                 </blockquote>
 
                 <h3 class="review-slide__author">Елена Пирогова</h3>
@@ -573,8 +573,8 @@
             </div>
           </div>
 
-          <div class="adv__button adv__button--prev swiper-button-prev"></div>
-          <div class="adv__button adv__button--next swiper-button-next"></div>
+          <div class="adv__button adv__button--prev primary-slider-button primary-slider-button--prev swiper-button-prev"></div>
+          <div class="adv__button adv__button--next primary-slider-button primary-slider-button--next swiper-button-next"></div>
         </div>
       </div>
     </section>
@@ -586,8 +586,8 @@
           нашего сайта.</p>
 
         <div class="gallery__swiper swiper">
-          <div class="gallery__button gallery__button--prev swiper-button-prev"></div>
-          <div class="gallery__button gallery__button--next swiper-button-next"></div>
+          <div class="gallery__button gallery__button--prev primary-slider-button primary-slider-button--prev swiper-button-prev"></div>
+          <div class="gallery__button gallery__button--next primary-slider-button primary-slider-button--next swiper-button-next"></div>
           <div class="gallery__swiper-wrapper swiper-wrapper">
             <div class="gallery__slide swiper-slide">
               <picture>
@@ -700,7 +700,7 @@
             </li>
 
           </ul>
-          <button class="form__submit" type="submit">отправить</button>
+          <button class="form__submit primary-button" type="submit">отправить</button>
         </form>
       </div>
     </section>
