--- a/source/index.html
+++ b/source/index.html
@@ -11,8 +11,14 @@
 <body class="page-body">
   <header data-test="header" class="header">
     <div class="container header__container">
-      <button class="header__burger-button" type="button">
+      <button class="header__burger-button burger" type="button">
         <span class="visually-hidden">Открыть меню</span>
+        <svg width="22" height="16" class="burger__open-icon burger__open-icon--menu-open">
+          <use href="/__spritemap#sprite-burger-open"></use>
+        </svg>
+        <svg width="18" height="18" class="burger__close-icon burger__close-icon--menu-open">
+          <use href="/__spritemap#sprite-burger-close"></use>
+        </svg>
       </button>
       <div class="header__logo logo">
         <span class="visually-hidden">Логотип 'Lifetour'</span>
@@ -21,9 +27,8 @@
         </svg>
       </div>
 
-      <nav class="header__nav main-nav">
+      <nav class="header__nav main-nav main-nav--is-open">
         <ul class="main-nav__list">
-          <!-- якорные ссылки -->
           <li class="main-nav__item">
             <a class="main-nav__link" href="#tours">Туры</a>
           </li>
@@ -49,7 +54,9 @@
     </div>
   </header>
 
-  <main>
+  <main class="page-main">
+    <div class="overlay"></div>
+    <!-- add class overlay--is-open -->
     <section data-test="hero" class="hero">
       <h1 class="visually-hidden">Организация походов в горы 'Lifetour'.</h1>
       <div class="hero__swiper swiper">
