--- a/source/index.html
+++ b/source/index.html
@@ -13,10 +13,12 @@
     <div class="container header__container">
       <button class="header__burger-button burger" type="button">
         <span class="visually-hidden">Открыть меню</span>
-        <svg width="22" height="16" class="burger__open-icon burger__open-icon--menu-open">
+        <svg width="22" height="16" class="burger__open-icon">
+          <!-- add class burger__open-icon--menu-open -->
           <use href="/__spritemap#sprite-burger-open"></use>
         </svg>
-        <svg width="18" height="18" class="burger__close-icon burger__close-icon--menu-open">
+        <svg width="18" height="18" class="burger__close-icon">
+          <!-- add class burger__close-icon--menu-open -->
           <use href="/__spritemap#sprite-burger-close"></use>
         </svg>
       </button>
@@ -27,7 +29,8 @@
         </svg>
       </div>
 
-      <nav class="header__nav main-nav main-nav--is-open">
+      <nav class="header__nav main-nav">
+        <!-- add class main-nav--is-open -->
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link" href="#tours">Туры</a>
