Вёрстка training, about

--- a/source/index.html
+++ b/source/index.html
@@ -181,14 +181,14 @@
                     <dd class="tour-slide__description tour-slide__description--location">Кавказ</dd>
                   </div>
                   <div class="tour-slide__description-wrapper">
-                  <div class="tour-slide__about-item">
-                    <dt class="visually-hidden">продолжительность тура</dt>
-                    <dd class="tour-slide__description tour-slide__description--days">4 дня</dd>
-                  </div>
-                  <div class="tour-slide__about-item">
-                    <dt class="visually-hidden">продолжительность тура</dt>
-                    <dd class="tour-slide__description tour-slide__description--nights">3 ночи</dd>
-                  </div>
+                    <div class="tour-slide__about-item">
+                      <dt class="visually-hidden">продолжительность тура</dt>
+                      <dd class="tour-slide__description tour-slide__description--days">4 дня</dd>
+                    </div>
+                    <div class="tour-slide__about-item">
+                      <dt class="visually-hidden">продолжительность тура</dt>
+                      <dd class="tour-slide__description tour-slide__description--nights">3 ночи</dd>
+                    </div>
                   </div>
                 </dl>
 
@@ -229,14 +229,14 @@
                     <dd class="tour-slide__description tour-slide__description--location">Алтай</dd>
                   </div>
                   <div class="tour-slide__description-wrapper">
-                  <div class="tour-slide__about-item">
-                    <dt class="visually-hidden">продолжительность тура</dt>
-                    <dd class="tour-slide__description tour-slide__description--days">14 дней</dd>
-                  </div>
-                  <div class="tour-slide__about-item">
-                    <dt class="visually-hidden">продолжительность тура</dt>
-                    <dd class="tour-slide__description tour-slide__description--nights">13 ночей</dd>
-                  </div>
+                    <div class="tour-slide__about-item">
+                      <dt class="visually-hidden">продолжительность тура</dt>
+                      <dd class="tour-slide__description tour-slide__description--days">14 дней</dd>
+                    </div>
+                    <div class="tour-slide__about-item">
+                      <dt class="visually-hidden">продолжительность тура</dt>
+                      <dd class="tour-slide__description tour-slide__description--nights">13 ночей</dd>
+                    </div>
                   </div>
                 </dl>
 
@@ -271,41 +271,41 @@
 
             <div class="tours__slide tour-slide swiper-slide">
               <div class="tour-slide__text-content">
-              <dl class="tour-slide__about-list">
-                <div class="tour-slide__about-item">
-                  <dt class="visually-hidden">Регион проведения</dt>
-                  <dd class="tour-slide__description tour-slide__description--location">Адыгея</dd>
-                </div>
-                <div class="tour-slide__description-wrapper">
-                <div class="tour-slide__about-item">
-                  <dt class="visually-hidden">продолжительность тура</dt>
-                  <dd class="tour-slide__description tour-slide__description--days">7 дней</dd>
-                </div>
-                <div class="tour-slide__about-item">
-                  <dt class="visually-hidden">продолжительность тура</dt>
-                  <dd class="tour-slide__description tour-slide__description--nights">6 ночей</dd>
-                </div>
-                </div>
-              </dl>
+                <dl class="tour-slide__about-list">
+                  <div class="tour-slide__about-item">
+                    <dt class="visually-hidden">Регион проведения</dt>
+                    <dd class="tour-slide__description tour-slide__description--location">Адыгея</dd>
+                  </div>
+                  <div class="tour-slide__description-wrapper">
+                    <div class="tour-slide__about-item">
+                      <dt class="visually-hidden">продолжительность тура</dt>
+                      <dd class="tour-slide__description tour-slide__description--days">7 дней</dd>
+                    </div>
+                    <div class="tour-slide__about-item">
+                      <dt class="visually-hidden">продолжительность тура</dt>
+                      <dd class="tour-slide__description tour-slide__description--nights">6 ночей</dd>
+                    </div>
+                  </div>
+                </dl>
 
-              <h3 class="tour-slide__title">Через Фишт к Чёрному морю и обратно</h3>
+                <h3 class="tour-slide__title">Через Фишт к Чёрному морю и обратно</h3>
 
-              <dl class="tour-slide__requirements-list">
-                <div class="tour-slide__requirements-item">
-                  <dt class="tour-slide__requirement-term">Сложность:</dt>
-                  <dd class="tour-slide__requirement tour-slide__requirement--difficulty" data-raiting="4">
-                    <span class="visually-hidden">4 из 5</span>
-                  </dd>
-                </div>
-                <div class="tour-slide__requirements-item">
-                  <dt class="tour-slide__requirement-term">Даты набора:</dt>
-                  <dd class="tour-slide__requirement">15.07-19.07</dd>
-                </div>
-                <div class="tour-slide__requirements-item">
-                  <dt class="tour-slide__requirement-term">Группа:</dt>
-                  <dd class="tour-slide__requirement">до 22 чел.</dd>
-                </div>
-              </dl>
+                <dl class="tour-slide__requirements-list">
+                  <div class="tour-slide__requirements-item">
+                    <dt class="tour-slide__requirement-term">Сложность:</dt>
+                    <dd class="tour-slide__requirement tour-slide__requirement--difficulty" data-raiting="4">
+                      <span class="visually-hidden">4 из 5</span>
+                    </dd>
+                  </div>
+                  <div class="tour-slide__requirements-item">
+                    <dt class="tour-slide__requirement-term">Даты набора:</dt>
+                    <dd class="tour-slide__requirement">15.07-19.07</dd>
+                  </div>
+                  <div class="tour-slide__requirements-item">
+                    <dt class="tour-slide__requirement-term">Группа:</dt>
+                    <dd class="tour-slide__requirement">до 22 чел.</dd>
+                  </div>
+                </dl>
               </div>
               <div class="tour-slide__img-wrapper">
                 <picture>
@@ -319,41 +319,41 @@
 
             <div class="tours__slide tour-slide swiper-slide">
               <div class="tour-slide__text-content">
-              <dl class="tour-slide__about-list">
-                <div class="tour-slide__about-item">
-                  <dt class="visually-hidden">Регион проведения</dt>
-                  <dd class="tour-slide__description tour-slide__description--location">Урал</dd>
-                </div>
-                <div class="tour-slide__description-wrapper">
-                <div class="tour-slide__about-item">
-                  <dt class="visually-hidden">продолжительность тура</dt>
-                  <dd class="tour-slide__description tour-slide__description--days">9 дней</dd>
-                </div>
-                <div class="tour-slide__about-item">
-                  <dt class="visually-hidden">продолжительность тура</dt>
-                  <dd class="tour-slide__description tour-slide__description--nights">10 ночей</dd>
-                </div>
-                </div>
-              </dl>
+                <dl class="tour-slide__about-list">
+                  <div class="tour-slide__about-item">
+                    <dt class="visually-hidden">Регион проведения</dt>
+                    <dd class="tour-slide__description tour-slide__description--location">Урал</dd>
+                  </div>
+                  <div class="tour-slide__description-wrapper">
+                    <div class="tour-slide__about-item">
+                      <dt class="visually-hidden">продолжительность тура</dt>
+                      <dd class="tour-slide__description tour-slide__description--days">9 дней</dd>
+                    </div>
+                    <div class="tour-slide__about-item">
+                      <dt class="visually-hidden">продолжительность тура</dt>
+                      <dd class="tour-slide__description tour-slide__description--nights">10 ночей</dd>
+                    </div>
+                  </div>
+                </dl>
 
-              <h3 class="tour-slide__title">Восхождение Манарага</h3>
+                <h3 class="tour-slide__title">Восхождение Манарага</h3>
 
-              <dl class="tour-slide__requirements-list">
-                <div class="tour-slide__requirements-item">
-                  <dt class="tour-slide__requirement-term">Сложность:</dt>
-                  <dd class="tour-slide__requirement tour-slide__requirement--difficulty" data-raiting="5">
-                    <span class="visually-hidden">5 из 5</span>
-                  </dd>
-                </div>
-                <div class="tour-slide__requirements-item">
-                  <dt class="tour-slide__requirement-term">Даты набора:</dt>
-                  <dd class="tour-slide__requirement">12.07-19.07</dd>
-                </div>
-                <div class="tour-slide__requirements-item">
-                  <dt class="tour-slide__requirement-term">Группа:</dt>
-                  <dd class="tour-slide__requirement">до 7 чел.</dd>
-                </div>
-              </dl>
+                <dl class="tour-slide__requirements-list">
+                  <div class="tour-slide__requirements-item">
+                    <dt class="tour-slide__requirement-term">Сложность:</dt>
+                    <dd class="tour-slide__requirement tour-slide__requirement--difficulty" data-raiting="5">
+                      <span class="visually-hidden">5 из 5</span>
+                    </dd>
+                  </div>
+                  <div class="tour-slide__requirements-item">
+                    <dt class="tour-slide__requirement-term">Даты набора:</dt>
+                    <dd class="tour-slide__requirement">12.07-19.07</dd>
+                  </div>
+                  <div class="tour-slide__requirements-item">
+                    <dt class="tour-slide__requirement-term">Группа:</dt>
+                    <dd class="tour-slide__requirement">до 7 чел.</dd>
+                  </div>
+                </dl>
               </div>
               <div class="tour-slide__img-wrapper">
                 <picture>
@@ -416,6 +416,9 @@
               <h4>Александр Прокофьев</h4>
               <a class="trainer-card__link" href="#">
                 <span class="visually-hidden">страница инструктора в 'vk'.</span>
+                <svg width="14" height="8">
+                  <use href="/__spritemap#sprite-vk"></use>
+                </svg>
               </a>
               <p>Строгий и внимательный инструктор, весёлый и общительный человек. Любит природу.</p>
             </div>
@@ -444,6 +447,9 @@
               <h4>Светлана Афиногенова</h4>
               <a class="trainer-card__link" href="#">
                 <span class="visually-hidden">страница инструктора в 'vk'.</span>
+                <svg width="14" height="8">
+                  <use href="/__spritemap#sprite-vk"></use>
+                </svg>
               </a>
               <p>Видеть мир вокруг, познавать его опасности, находить друг друга, становиться ближе, чувствовать —
                 в этом назначение жизни.</p>
@@ -472,6 +478,9 @@
               <h4>Надежда Колесниченко</h4>
               <a class="trainer-card__link" href="#">
                 <span class="visually-hidden">страница инструктора в 'vk'.</span>
+                <svg width="14" height="8">
+                  <use href="/__spritemap#sprite-vk"></use>
+                </svg>
               </a>
               <p>Участники говорят, что Надежда ответственная, приятная в общении, и в поездках с ней чувствуешь себя
                 спокойно и уверенно.</p>
@@ -500,6 +509,9 @@
               <h4>Федор Кайгородов</h4>
               <a class="trainer-card__link" href="#">
                 <span class="visually-hidden">страница инструктора в 'vk'.</span>
+                <svg width="14" height="8">
+                  <use href="/__spritemap#sprite-vk"></use>
+                </svg>
               </a>
               <p>Опыт походов: Ходит в походы с 2001 года. В России побывал в горных районах Хибины, Архыз, много
                 путешествует по Европе.</p>
@@ -528,6 +540,9 @@
               <h4>Даниэль Васнецов</h4>
               <a class="trainer-card__link" href="#">
                 <span class="visually-hidden">страница инструктора в 'vk'.</span>
+                <svg width="14" height="8">
+                  <use href="/__spritemap#sprite-vk"></use>
+                </svg>
               </a>
               <p>Покорял самые сложные вершины. Выбирался из под лавин, дружит с медведями и не только.</p>
             </div>
@@ -535,7 +550,7 @@
           </div>
         </div>
 
-        <h3 class="training__subtitle primary-subtitle">Процесс обучения</h3>
+        <h3 class="training__subtitle">Процесс обучения</h3>
         <ol class="training__process-list">
           <li class="training__process-item">Изучение спортивного туристского движения</li>
           <li class="training__process-item">Подготовка и техническое снаряжение в походах</li>
@@ -547,18 +562,36 @@
 
     <section data-test="about" class="about" id="about">
       <div class="about__container container">
-        <!-- primary-title -->
-        <h2>О нас</h2>
-        <!-- primary-subtitle -->
-        <h3>История компании</h3>
-        <p>В далёком 2000 году мы начали заниматься туризмом — походы, поездки, восхождения, нам это настолько
-          понравилось, что мы этим стали жить. Спустя 5 лет, в 2005 году мы основали компанию, чтобы показывать людям
-          удивительные места нашей страны.</p>
-        <!-- primary-subtitle -->
-        <h3>Наша цель</h3>
-        <p>Подарить вам незабываемые впечатления от похода в горы. Мы берём на себя все организационные вопросы.
-          При организации мы обязательно учтём все ваши пожелания. Вам останется только наслаждаться незабываемым
-          приключением в приятной компании.</p>
+        <div class="about__photo">
+          <picture>
+            <source type="image/webp" media="(min-width: 1440px)"
+              srcset="img/content/about-l.webp 1x, img/content/about-2x-l.webp 2x" width="660" height="498">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/content/about-m.webp 1x, img/content/about-2x-m.webp 2x" width="450" height="350">
+            <source type="image/webp" srcset="img/content/about-s.webp 1x, img/content/about-2x-s.webp 2x" width="434"
+              height="400">
+            <source type="image/jpeg" media="(min-width: 1440px)"
+              srcset="img/content/about-l.jpg 1x, img/content/about-2x-l.jpg 2x" width="660" height="498">
+            <source type="image/jpeg" media="(min-width: 768px)"
+              srcset="img/content/about-m.jpg 1x, img/content/about-2x-m.jpg 2x" width="450" height="350">
+            <img src="img/content/about-s.jpg" srcset="img/content/about-2x-s.jpg 2x" width="434" height="400"
+              alt="Поход с командой 'Lifetour'.">
+          </picture>
+        </div>
+        <div class="about__content">
+          <!-- primary-title -->
+          <h2>О нас</h2>
+          <!-- primary-subtitle -->
+          <h3>История компании</h3>
+          <p>В далёком 2000 году мы начали заниматься туризмом — походы, поездки, восхождения, нам это настолько
+            понравилось, что мы этим стали жить. Спустя 5 лет, в 2005 году мы основали компанию, чтобы показывать людям
+            удивительные места нашей страны.</p>
+          <!-- primary-subtitle -->
+          <h3>Наша цель</h3>
+          <p>Подарить вам незабываемые впечатления от похода в горы. Мы берём на себя все организационные вопросы.
+            При организации мы обязательно учтём все ваши пожелания. Вам останется только наслаждаться незабываемым
+            приключением в приятной компании.</p>
+        </div>
       </div>
     </section>
 
