--- a/source/index.html
+++ b/source/index.html
@@ -927,7 +927,7 @@
     <section data-test="form" class="form">
       <div class="form__container container">
         <h2>Остались вопросы?</h2>
-        <p>Заполните форму и наш оператор свяжется с вами для консультации.</p>
+        <p>Заполните форму и наш оператор свяжется<br>с вами для консультации.</p>
 
         <form class="form__fields" action="https://echo.htmlacademy.ru/" method="post">
           <ul class="form__list">
