--- a/source/index.html
+++ b/source/index.html
@@ -959,21 +959,21 @@
           увлекательными историями и подобрать для вас тур.</p>
 
         <dl class="contacts__list">
-          <div class="contacts__item contact">
+          <div class="contacts__item contact contact--phone">
             <dt class="contact__name">Телефон</dt>
             <dd class="contact__value">
               <a class="contact__link" href="tel:89837454545">+7 983 745-45-45</a>
             </dd>
           </div>
 
-          <div class="contacts__item contact">
+          <div class="contacts__item contact contact--mail">
             <dt class="contact__name">Email</dt>
             <dd class="contact__value">
               <a class="contact__link" href="mail-to:info@lifetour.com">info@lifetour.com</a>
             </dd>
           </div>
 
-          <div class="contacts__item contact">
+          <div class="contacts__item contact contact--address">
             <dt class="contact__name">Адрес</dt>
             <dd class="contact__value">г. Москва, пр-т Мира, д. 14, офис 101</dd>
           </div>
