Вёрстка footer, декор фона

--- a/source/index.html
+++ b/source/index.html
@@ -998,69 +998,71 @@
     </section>
 
     <div class="main-footer">
-      <div class="main-footer__logo logo">
-        <span class="visually-hidden">Логотип 'Lifetour'</span>
-        <svg width="142" height="42">
-          <use href="/__spritemap#sprite-logo"></use>
-        </svg>
+      <div class="main-footer__container container">
+        <div class="main-footer__logo logo">
+          <span class="visually-hidden">Логотип 'Lifetour'</span>
+          <svg width="142" height="42">
+            <use href="/__spritemap#sprite-logo"></use>
+          </svg>
+        </div>
+
+        <ul class="main-footer__nav">
+          <li class="main-footer__item">
+            <a class="main-footer__link" href="#tours">Туры</a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link" href="#training">Обучение</a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link" href="#about">О нас</a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link" href="#reviews">Отзывы</a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link" href="#gallery">Фотографии</a>
+          </li>
+          <li class="main-footer__item">
+            <a class="main-footer__link" href="#contacts">Контакты</a>
+          </li>
+        </ul>
+
+        <a class="main-footer__phone" href="tel:88000000000"><span class="visually-hidden">Наш
+            телефон</span>8 800 000-00-00</a>
+
+        <ul class="main-footer__social-list socials">
+
+          <li class="socials__item">
+            <a class="socials__link" href="404.html">
+              <span class="visually-hidden">Lifetour в 'VK'.</span>
+              <svg width="17" height="9">
+                <use href="/__spritemap#sprite-vk"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="socials__item">
+            <a class="socials__link" href="404.html">
+              <span class="visually-hidden">Lifetour в 'Одноклассники'.</span>
+              <svg width="10" height="16">
+                <use href="/__spritemap#sprite-odnoklassniki"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="socials__item">
+            <a class="socials__link" href="404.html">
+              <span class="visually-hidden">Lifetour на 'Reddit'.</span>
+              <svg width="15" height="15">
+                <use href="/__spritemap#sprite-reddit"></use>
+              </svg>
+            </a>
+          </li>
+
+        </ul>
+
+        <a class="main-footer__privacy" href="#">Политика конфиденциальности</a>
       </div>
-
-      <ul class="main-footer__nav">
-        <li class="main-footer__item">
-          <a class="main-footer__link" href="#tours">Туры</a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link" href="#training">Обучение</a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link" href="#about">О нас</a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link" href="#reviews">Отзывы</a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link" href="#gallery">Фотографии</a>
-        </li>
-        <li class="main-footer__item">
-          <a class="main-footer__link" href="#contacts">Контакты</a>
-        </li>
-      </ul>
-
-      <a class="main-footer__phone" href="tel:88000000000"><span class="visually-hidden">Наш
-          телефон</span>8 800 000-00-00</a>
-
-      <ul class="main-footer__social-list socials">
-
-        <li class="socials__item">
-          <a class="socials__link" href="404.html">
-            <span class="visually-hidden">Lifetour в 'VK'.</span>
-            <svg width="17" height="9">
-              <use href="/__spritemap#sprite-vk"></use>
-            </svg>
-          </a>
-        </li>
-
-        <li class="socials__item">
-          <a class="socials__link" href="404.html">
-            <span class="visually-hidden">Lifetour в 'Одноклассники'.</span>
-            <svg width="10" height="16">
-              <use href="/__spritemap#sprite-odnoklassniki"></use>
-            </svg>
-          </a>
-        </li>
-
-        <li class="socials__item">
-          <a class="socials__link" href="404.html">
-            <span class="visually-hidden">Lifetour на 'Reddit'.</span>
-            <svg width="15" height="15">
-              <use href="/__spritemap#sprite-reddit"></use>
-            </svg>
-          </a>
-        </li>
-
-      </ul>
-
-      <a class="main-footer__privacy" href="#">Политика конфиденциальности</a>
     </div>
   </footer>
 
