add hero swiper

--- a/source/index.html
+++ b/source/index.html
@@ -61,7 +61,7 @@
   <main class="page-main">
     <div class="overlay"></div>
     <!-- add class overlay--is-open -->
-    <!-- <section data-test="hero" class="hero">
+    <section data-test="hero" class="hero">
       <h1 class="visually-hidden">Организация походов в горы 'Lifetour'.</h1>
       <div class="hero__swiper swiper">
         <div class="hero__swiper-wrapper swiper-wrapper">
@@ -157,7 +157,7 @@
 
         <div class="hero__pagination swiper-pagination"></div>
       </div>
-    </section> -->
+    </section>
 
     <section data-test="tours" class="tours" id="tours">
       <div class="tours__container container">
