--- a/source/index.html
+++ b/source/index.html
@@ -9,16 +9,15 @@
 </head>
 
 <body class="page-body">
+
   <header data-test="header" class="header">
     <div class="container header__container">
       <button class="header__burger-button burger" type="button">
         <span class="visually-hidden">Открыть меню</span>
         <svg width="22" height="16" class="burger__open-icon">
-          <!-- add class burger__open-icon--menu-open -->
           <use href="/__spritemap#sprite-burger-open"></use>
         </svg>
         <svg width="18" height="18" class="burger__close-icon">
-          <!-- add class burger__close-icon--menu-open -->
           <use href="/__spritemap#sprite-burger-close"></use>
         </svg>
       </button>
@@ -29,8 +28,8 @@
         </svg>
       </div>
 
+      <div class="overlay">
       <nav class="header__nav main-nav">
-        <!-- add class main-nav--is-open -->
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link" href="#tours">Туры</a>
@@ -52,6 +51,7 @@
           </li>
         </ul>
       </nav>
+    </div>
 
       <a class="header__phone" href="tel:88000000000"><span class="visually-hidden">Наш
           телефон</span>8 800 000-00-00</a>
@@ -59,8 +59,6 @@
   </header>
 
   <main class="page-main">
-    <div class="overlay"></div>
-    <!-- add class overlay--is-open -->
     <section data-test="hero" class="hero">
       <h1 class="visually-hidden">Организация походов в горы 'Lifetour'.</h1>
       <div class="hero__swiper swiper">
