Чинит adv слайдер

--- a/source/index.html
+++ b/source/index.html
@@ -793,6 +793,18 @@
               <p>Уделяем первостепенное внимание охране окружающей среды и гарантируем, что туры оказывают минимальное
                 воздействие на природную среду. Наша компания следует принципу «Не оставлять следов».</p>
             </div>
+
+            <div class="adv__slide adv-slide adv-slide--nature swiper-slide">
+              <h3>Путешейтвуй с Lifetour</h3>
+              <p>Организация походов в горы.</p>
+
+            </div>
+            <div class="adv__slide adv-slide adv-slide--nature swiper-slide">
+              <h3>Путешейтвуй с Lifetour</h3>
+              <p>Организация походов в горы.</p>
+
+            </div>
+
           </div>
 
           <div
